7045662: G1: OopsInHeapRegionClosure::set_region() should not be virtual

Make the method non-virtual, remove five unused closures, and fix a couple of copyright typos.

Reviewed-by: stefank, johnc, poonam